@@ -2,6 +2,7 @@
  - Add EXAMPLE5 section to doc.
  - Implement station order.
  - Rewrite XML map to new version with line IDs.
+ - Update Module::Install to 1.18 version.
 
 0.13 2015-10-16T12:36:19+02:00
  - Add tests for get_node_by_id() and get_node_by_name() methods.
